# fastapi-sqlalchemy-alembic-demo

./: .gitignore  Makefile  README.md  alembic.ini  db_models.py  db_query_functions.py  environment.py  main.py  pyproject.toml  schemas.py
alembic/: README.md  env.py
alembic/versions/: 2023-12-18T170529_bdf37fef59ef_add_user_and_item.py  2023-12-18T230453_e82562f8e080_add_document_and_doc_user_m2m_table.py
tests/: conftest.py  test_api.py
