[tool.poetry]
name = "fastapi-sqlalchemy-alembic-demo"
version = "0.1.0"
description = ""
authors = ["Alexander <alexander.shein@iceye.fi>"]
readme = "README.md"
packages = [{ include = "fastapi_sqlalchemy_alembic_demo" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
black = "^23.12.0"
pytest = "^7.4.3"
httpx = "^0.25.2"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
